<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BinaryExtras</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    
    <!-- MainActivity -->
    <string name="textViewtitle">BinaryExtras</string>
    <string name="ButtonConverter">Converter!</string>
    <string name="ButtonQuiz">Quiz!</string>
    <string name="textViewBin">Binary Loading . . .</string>
    
    <!-- Converter -->
    <string name="InputTest">Enter value to convert</string>
    <string name="ToBinaryButton">To Binary</string>
    <string name="ToDecimalButton">To Decimal</string>
    <string name="OutputText">0</string>
    <string-array name="NoOfQnsSelect">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>100</item>
        <item>1000 (Are you kidding me.)</item>
    </string-array>


</resources>