<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreen"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:text="@string/textViewtitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/DarkGreen"
        android:textSize="50sp" />

    <Button
        android:id="@+id/ButtonConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/ButtonConverter"
        android:textSize="40sp" />

    <Button
        android:id="@+id/ButtonQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/ButtonQuiz"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/textViewBin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.26"
        android:text="@string/textViewBin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Placed it here just incase we want advertisements -->
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />
    
</LinearLayout>